--- a/OrangeDot6_files/final_report/orange-dot-6-final-knit.Rmd
+++ b/OrangeDot6_files/final_report/orange-dot-6-final-knit.Rmd
@@ -31,6 +31,7 @@ library(tidycensus)
 library(scales)
 library(ggspatial)
 library(tigris)
+options(tigris_use_cache = TRUE)
 library(readxl)
 library(stringr)
 library(sf)
@@ -613,7 +614,7 @@ soc_group_num == "53" ~ "Transportation and Material Moving"
 ))
 
 occupations_filtered %>%
-  mutate(employment_per_1_000_jobs = employment_per_1_000_jobs/100,
+  mutate(employment_per_1_000_jobs = round(employment_per_1_000_jobs,1),
          color = "") %>% 
   select(c(occupation, annual_median_wage_2, color, employment_per_1_000_jobs, job_group, median_wage_bin)) %>%
   gt() %>% 
@@ -631,16 +632,12 @@ occupations_filtered %>%
     ),
     decimals = 2
   ) %>% 
-  fmt_percent(
-    columns = employment_per_1_000_jobs,
-    decimals = 0
-  ) %>% 
   cols_hide(columns = c(median_wage_bin)) %>% 
   cols_label(
     occupation = "Occupation",
     annual_median_wage_2 = "Annual Median Wage",
         color = "",
-    employment_per_1_000_jobs = "Employment Rate",
+    employment_per_1_000_jobs = "Employment Rate (per 1,000 jobs)",
     median_wage_bin = "",
     job_group = "Occupation Group"
   ) %>% 
@@ -1513,7 +1510,7 @@ This report was done in partnership between Network2Work@PVCC and the UVA Equity
 
 The authors of this report are: 
 
-Elizabeth Mitchell, Data Scientist of Equitable Analysis, The Equity Center, University of Virginia.
+Elizabeth Mitchell, Senior Research Specialist, The Equity Center, University of Virginia.
 
 Michele Claibourn, Director of Equitable Analysis, The Equity Center, University of Virginia and Assistant Professor, Batten School of Leadership and Public Policy, University of Virginia. 
 
